# swift-nio

./: .PrivacyInfo.xcprivacy  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .licenseignore  .mailfilter  .mailmap  .spi.yml  .swift-format  .swift-version  .swiftformat  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.txt  Dockerfile  ISSUE_TEMPLATE.md  NOTICE.txt  Package.swift  Package.swift@5.3  Package@swift-5.4.swift  Package@swift-5.5.swift  Package@swift-5.6.swift  PrivacyInfo.xcprivacy  README.md  SECURITY.md  generate_docs.sh  generate_linux_tests.rb  index.html  podspec  sanity  swiftw  test
Sources/: BaseSocket.swift  Buffer.swift  CMakeLists.txt  Channel.swift  ChannelHandler.swift  ChannelHandlerContext.swift  ChannelInboundInvoker.swift  ChannelOutboundInvoker.swift  ChannelPipeline.swift  EventLoop.swift  IO.swift  NIOServer.swift  PureEchoExample.swift  Selectable.swift  Selector.swift  ServerSocket.swift  Socket.swift  SocketAddresses.swift  SocketOption.swift  main.swift
Sources/CNIOAtomics/: CMakeLists.txt
Sources/CNIOBSD/: shim.c
Sources/CNIODarwin/: CMakeLists.txt  shim.c
Sources/CNIOFreeBSD/: shim.c
Sources/CNIOHTTPParser/: CMakeLists.txt  c_nio_http_parser.c  update_and_patch_http_parser.sh
Sources/CNIOLLHTTP/: c_nio_api.c  c_nio_http.c  c_nio_llhttp.c  update_and_patch_llhttp.sh
Sources/CNIOLinux/: CMakeLists.txt  empty.c  ifaddrs-android.c  ifaddrs.c  liburing_shims.c  shim.c  update_and_patch_cnio_linux.sh
Sources/CNIOOpenBSD/: shim.c
Sources/CNIOPosix/: event_loop_id.c
Sources/CNIOSHA1/: CMakeLists.txt  c_nio_sha1.c  update_and_patch_sha1.sh
Sources/CNIOWASI/: CNIOWASI.c
Sources/CNIOWindows/: CMakeLists.txt  WSAStartup.c  shim.c
Sources/CNIOZlib/: empty.c
Sources/NIO/: AddressedEnvelope.swift  Array+UInt8+ByteBuffer.swift  BSDSocket.swift  BSDSocketAPI.swift  BSDSocketAPICommon.swift  BSDSocketAPIPosix.swift  BSDSocketAPIWindows.swift  BaseSocket.swift  BaseSocketChannel.swift  BaseStreamSocketChannel.swift  BlockingIOThreadPool.swift  Bootstrap.swift  Buffer.swift  ByteBuffer-aux.swift  ByteBuffer-builder.swift  ByteBuffer-conversions.swift  ByteBuffer-core.swift  ByteBuffer-extract.swift  ByteBuffer-foundation.swift  ByteBuffer-int.swift  ByteBuffer-views.swift  ByteBuffer.swift  ByteBufferCore.swift  ByteBufferGuts.swift  ByteBufferStorage.swift  ByteCollectionUtils.swift  CMakeLists.txt  Channel.swift  ChannelHandler.swift  ChannelHandlerContext.swift  ChannelHandlers.swift  ChannelInboundInvoker.swift  ChannelInvoker.swift  ChannelOption.swift  ChannelOutboundInvoker.swift  ChannelPipeline.swift  CircularBuffer.swift  Codec.swift  CompositeError.swift  ContiguousCollection.swift  (+79 more)
Sources/NIOAsyncAwaitDemo/: AsyncChannelIO.swift  FullRequestResponse.swift  main.swift
Sources/NIOAsyncAwaitServerExample/: Server.swift  main.swift
Sources/NIOAsyncRuntime/: AsyncEventLoop.swift  AsyncEventLoopExecutor.swift  AsyncEventLoopGroup.swift  AsyncThreadPool.swift  MultiThreadedEventLoopGroup.swift  NIOThreadPool.swift  README.md
Sources/NIOChatClient/: CMakeLists.txt  README.md  main.swift
Sources/NIOChatServer/: CMakeLists.txt  README.md  main.swift
Sources/NIOConcurrencyHelpers/: Atomics.swift  CMakeLists.txt  LockedValue.swift  NIOAtomic.swift  NIOLock.swift  NIOLockedValueBox.swift  NIOThreadPoolWorkAvailable.swift  atomics.swift  fastatomics.swift  lock.swift
Sources/NIOCore/: ActorExecutor.swift  AddressedEnvelope.swift  AsyncAwaitSupport+OldXcodes.swift  AsyncAwaitSupport.swift  AsyncChannel.swift  AsyncChannelAdapter.swift  BSDSocketAPI.swift  ByteBuffer-QUICLengthPrefix.swift  ByteBuffer-async.swift  ByteBuffer-aux.swift  ByteBuffer-binaryEncodedLengthPrefix.swift  ByteBuffer-conversions.swift  ByteBuffer-core.swift  ByteBuffer-hex.swift  ByteBuffer-hexdump.swift  ByteBuffer-int.swift  ByteBuffer-lengthPrefix.swift  ByteBuffer-multi-int.swift  ByteBuffer-quicBinaryEncodingStrategy.swift  ByteBuffer-views.swift  Channel.swift  ChannelBuilder.swift  ChannelHandler.swift  ChannelHandlers.swift  ChannelInvoker.swift  ChannelOption.swift  ChannelPipeline.swift  CircularBuffer.swift  Codec.swift  ConvenienceOptionSupport.swift  CurrentEventLoop.swift  CurrentEventLoopFuture.swift  CurrentEventLoopPromise.swift  DeadChannel.swift  DispatchQueue+WithFuture.swift  EventLoop+Deprecated.swift  EventLoop+SerialExecutor.swift  EventLoop.swift  EventLoopFuture+AssumeIsolated.swift  EventLoopFuture+Deprecated.swift  (+44 more)
Sources/NIOCrashTester/: CrashTestSuites.swift  CrashTests+ByteBuffer.swift  CrashTests+EventLoop.swift  CrashTests+HTTP.swift  CrashTests+LoopBound.swift  CrashTests+Strict.swift  CrashTests+System.swift  OutputGrepper.swift  main.swift
Sources/NIOEchoClient/: CMakeLists.txt  README.md  main.swift
Sources/NIOEchoServer/: CMakeLists.txt  README.md  main.swift
Sources/NIOEmbedded/: ActorEmbeddedChannel.swift  AsyncEmbeddedEventLoop.swift  AsyncTestingChannel.swift  AsyncTestingEventLoop.swift  Embedded.swift
Sources/NIOFS/: Array+FileSystem.swift  ArraySlice+FileSystem.swift  BufferedReader+Split.swift  BufferedReader.swift  BufferedWriter.swift  ByteBuffer+FileSystem.swift  ByteCount.swift  Convenience.swift  DirectoryEntries.swift  DirectoryEntry.swift  Exports.swift  FileChunks.swift  FileHandle.swift  FileHandleProtocol.swift  FileInfo.swift  FileSystem.swift  FileSystemError+Syscall.swift  FileSystemError.swift  FileSystemProtocol.swift  FileType.swift  IOStrategy.swift
Sources/NIOFSFoundationCompat/: Data+FileSystem.swift  Date+FileInfo.swift
Sources/NIOFileSystem/: Array+FileSystem.swift  ArraySlice+FileSystem.swift  BufferedReader.swift  BufferedWriter.swift  ByteBuffer+Convenience.swift  ByteBuffer+FileSystem.swift  ByteCount.swift  Convenience.swift  CopyStrategy.swift  DirectoryEntries.swift  DirectoryEntry.swift  Exports.swift  FileChunks.swift  FileHandle.swift  FileHandleProtocol.swift  FileInfo.swift  FileSystem.swift  FileSystemError+Syscall.swift  FileSystemError.swift  FileSystemProtocol+FilePath.swift  (+8 more)
Tests/: CMakeLists.txt  LinuxMain.swift
(+14846 files in other folders)
