add_subdirectory(CNIOAtomics)
#add_subdirectory(CNIODarwin)
#add_subdirectory(CNIOHTTPParser)
#add_subdirectory(CNIOLinux)
#add_subdirectory(CNIOSHA1)
#add_subdirectory(NIO)
#add_subdirectory(NIOChatClient)
#add_subdirectory(NIOChatServer)
add_subdirectory(NIOConcurrencyHelpers)
#add_subdirectory(NIOEchoClient)
#add_subdirectory(NIOEchoServer)
#add_subdirectory(NIOFoundationCompat)
#add_subdirectory(NIOHTTP1)
#add_subdirectory(NIOHTTP1Client)
#add_subdirectory(NIOHTTP1Server)
#add_subdirectory(NIOMulticastChat)
#add_subdirectory(NIOPerformanceTester)
#add_subdirectory(NIOTLS)
#add_subdirectory(NIOTestUtils)
#add_subdirectory(NIOUDPEchoClient)
#add_subdirectory(NIOUDPEchoServer)
#add_subdirectory(NIOWebSocket)
#add_subdirectory(NIOWebSocketServer)
#add_subdirectory(_NIO1APIShims)
