add_subdirectory(CNIOAtomics)
add_subdirectory(CNIODarwin)
add_subdirectory(CNIOHTTPParser)
add_subdirectory(CNIOLinux)
add_subdirectory(CNIOWindows)
add_subdirectory(CNIOSHA1)
add_subdirectory(NIOConcurrencyHelpers)
add_subdirectory(NIO)
add_subdirectory(NIOFoundationCompat)
add_subdirectory(NIOHTTP1)
if(BUILD_TESTING)
  add_subdirectory(NIOTestUtils)
endif()

add_subdirectory(NIOEchoClient)
add_subdirectory(NIOEchoServer)
