add_library(NIO
  AddressedEnvelope.swift
  BaseSocket.swift
  BaseSocketChannel.swift
  Bootstrap.swift
  ByteBuffer-aux.swift
  ByteBuffer-core.swift
  ByteBuffer-int.swift
  ByteBuffer-views.swift
  Channel.swift
  ChannelHandler.swift
  ChannelHandlers.swift
  ChannelInvoker.swift
  ChannelOption.swift
  ChannelPipeline.swift
  CircularBuffer.swift
  Codec.swift
  DatagramVectorReadManager.swift
  DeadChannel.swift
  Embedded.swift
  EventLoop.swift
  EventLoopFuture.swift
  FileDescriptor.swift
  FileHandle.swift
  FileRegion.swift
  GetaddrinfoResolver.swift
  HappyEyeballs.swift
  Heap.swift
  IO.swift
  IOData.swift
  IntegerTypes.swift
  Interfaces.swift
  Linux.swift
  LinuxCPUSet.swift
  MarkedCircularBuffer.swift
  MulticastChannel.swift
  NIOAny.swift
  NIOCloseOnErrorHandler.swift
  NIOThreadPool.swift
  NonBlockingFileIO.swift
  PendingDatagramWritesManager.swift
  PendingWritesManager.swift
  PriorityQueue.swift
  RecvByteBufferAllocator.swift
  Resolver.swift
  Selectable.swift
  Selector.swift
  ServerSocket.swift
  Socket.swift
  SocketAddresses.swift
  SocketChannel.swift
  SocketOptionProvider.swift
  System.swift
  Thread.swift
  TypeAssistedChannelHandler.swift
  Utilities.swift
)
target_link_libraries(NIO PUBLIC CNIOAtomics NIOConcurrencyHelpers CNIOLinux CNIODarwin)
target_include_directories(NIO INTERFACE ${CMAKE_Swift_MODULE_DIRECTORY})
