add_library(NIOHTTP1Tests
  ByteBufferUtilsTest+XCTest.swift
  ByteBufferUtilsTest.swift
  HTTPClientUpgradeTests+XCTest.swift
  HTTPClientUpgradeTests.swift
  HTTPDecoderLengthTest+XCTest.swift
  HTTPDecoderLengthTest.swift
  HTTPDecoderTest+XCTest.swift
  HTTPDecoderTest.swift
  HTTPHeadersTest+XCTest.swift
  HTTPHeadersTest.swift
  HTTPRequestEncoderTest+XCTest.swift
  HTTPRequestEncoderTest.swift
  HTTPResponseEncoderTest+XCTest.swift
  HTTPResponseEncoderTest.swift
  HTTPResponseStatusTests+XCTest.swift
  HTTPResponseStatusTests.swift
  HTTPServerClientTest+XCTest.swift
  HTTPServerClientTest.swift
  HTTPServerPipelineHandlerTest+XCTest.swift
  HTTPServerPipelineHandlerTest.swift
  HTTPServerProtocolErrorHandlerTest+XCTest.swift
  HTTPServerProtocolErrorHandlerTest.swift
  HTTPServerUpgradeTests+XCTest.swift
  HTTPServerUpgradeTests.swift
  HTTPTest+XCTest.swift
  HTTPTest.swift
  HTTPTypesTest+XCTest.swift
  HTTPTypesTest.swift)
target_sources(NIOHTTP1Tests PRIVATE
  ../NIOTests/TestUtils.swift)
target_compile_options(NIOHTTP1Tests PRIVATE
  -enable-testing)
target_link_libraries(NIOHTTP1Tests PUBLIC
  CNIOWindows
  NIO
  NIOHTTP1
  NIOTestUtils
  XCTest)
